force-app/main/default/objects/QuoteLineItem/fields/Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price__c</fullName>
    <description>Actual Sales Price (aka Selling Price)</description>
    <label>Total List Price OLD</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>