force-app/main/default/objects/QuoteLineItem/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <formula>Quote.Opportunity.Account.VAT__c/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>