force-app/main/default/objects/QuoteLineItem/fields/TaxPercentage__c.field-meta.xml
<CustomField>
    <fullName>TaxPercentage__c</fullName>
    <formula>Quote.TaxPercentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>