force-app/main/default/objects/QuoteLineItem/fields/UniqueId__c.field-meta.xml
<CustomField>
    <fullName>UniqueId__c</fullName>
    <description>Shows the Unique Id of the Quote Line Item</description>
    <formula>Quote.QuoteNumber +&quot;-&quot;+LineNumber+&quot;-&quot;+ProductSerialNumber__c</formula>
    <inlineHelpText>The Unique Id of the Quote Line Item</inlineHelpText>
    <label>UniqueId</label>
    <type>Text</type>
</CustomField>