force-app/main/default/objects/QuoteLineItem/fields/Volume_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Volume_Reduction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Volume Reduction</label>
    <type>Checkbox</type>
</CustomField>